Compile and execute from main()